# SmartStudyPlanner

./: .env  .env.example  .gitignore  DASHBOARD_PROFILE_UPDATES.md  GOOGLE_CALENDAR_QUICKSTART.md  GOOGLE_CALENDAR_SETUP.md  LINK_LIBRARY_SECURITY.md  MINDMAP_FEATURE_GUIDE.md  create_demo_user.py  pyproject.toml  requirements.txt  test_napkin_api.py
backend/: agent.py  auth.py  google_calendar.py  main.py  pdf_parser.py  resources_db.py  test_google_calendar.py
backend/db/: MONGODB_GUIDE.md  collections.py  local_store.py  mongo.py  schema.md
frontend/: Homepage.html  auth.js  dashboard.html  google-calendar-integration.js  link-library.html  long-term-goal.html  mindmap.html  planner.html  profile.html  resources.html  setup.html  style.css  tasks.html
