[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smartstudyplanner"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
	"fastapi",
	"uvicorn",
	"python-multipart",
	"openai",
	"PyPDF2",
	"python-dotenv",
	"motor",
	"requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["frontend*"]

[tool.vercel]
entrypoint = "backend.main:app"